# boorufetch-py

./: README.asciidoc  README.md  pyproject.toml  requirements.txt
app/: main.py
